fix issues with minimap alignment, fix issues with plot and image not align on zoom in spatialge

--- a/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
@@ -243,7 +243,7 @@ mat-slider {
     pointer-events: none;
 }
 
-.cropthis {
+.nonOverlay {
     margin-top: 10px;
     overflow: hidden;
 }
@@ -289,10 +289,6 @@ mat-slider {
     margin: 0 !important;
     font-weight: 400;
 }
-
-// .hide-title {
-//     display: none;
-// }
 
 mat-expansion-panel-header:hover {
     background-color: white
